syntax = "proto3";

package analyzer;
option go_package = "k8s-workload-analyzer/api/proto";

service WorkloadAnalyzer {
  rpc AnalyzeWorkload (AnalyzeRequest) returns (AnalyzeResponse) {}
}

message AnalyzeRequest {
  string namespace = 1;
  string workload_type = 2;
  string workload_name = 3;
  string yaml_content = 4;
}

message AnalyzeResponse {
  string analysis = 1;
  repeated Recommendation recommendations = 2;
}

message Recommendation {
  string category = 1;
  string description = 2;
  string severity = 3;
  string suggested_action = 4;
}